# GenAI

./: .gitignore  notes.txt  one.ipynb  one.py  pyproject.toml  requirements.txt  tp.ipynb
15_rag_evaluation/: 1-rag_evaluation.ipynb
1_dataingestion/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb
2_embeding/: embedding.ipynb  openaiembeddings.ipynb  tp.ipynb
3_vector_store_database/: 1-chromadb.ipynb  tp.ipynb
3_vector_store_database/chroma_db/: chroma.sqlite3
4_advance_chunking/: 1-semantichunking.ipynb
5_Hybrid_Search_Strategies/: 1-densesparse.ipynb  3-mmr.ipynb
5_Multi_Modal_RAG/: 1-multimodalopenai.ipynb
8_agentic_rag/: 1-agenticrag.ipynb  2-ReAct.ipynb
9_autonomous_rag/: 3-COTRag.ipynb  4-Selfreflection.ipynb  5-QueryPlanningdecomposition.ipynb  6-Iterativeretrieval.ipynb  7-answersynthesis.ipynb
