[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "bs4>=0.0.2",
    "chromadb>=1.4.1",
    "docx2txt>=0.9",
    "duckdb>=1.4.4",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "jq>=1.11.0",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.6",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.5.0",
    "numexpr>=2.14.1",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.27",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
